# napari-event-annotate

./: .gitignore  LICENSE  README.md  debug.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_event_annotate/: __init__.py  _qwidgets.py  _widget.py  napari.yaml  utils.py
src/napari_event_annotate/_tests/: test_sample_data.py  test_widget.py
